fix: corrige problema com z-index nos popups e com botão grande de adicionar post

--- a/blocks/add-popup.css
+++ b/blocks/add-popup.css
@@ -9,6 +9,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  z-index: 1000;
 }
 
 .add-popup__container {
